--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+     "cors": "^2.8.5",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
