--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 SEVEN_USER=info@sevenwondersplayschool.com
 SEVEN_PASS=Info@Seven321
 INFRA_USER=contact@ssiinfra.com
-INFRA_PASS=Contact@87554
+INFRA_PASS=Contact@8755
+USPS_USER=info@usps.org.in
+USPS_PASS=Info@usps0987
+MULNIVASI_USER=info@mulnivasi.in
+MULNIVASI_PASS=Info@mulni097
+CONSERVE_USER=info@conserveearthfoundation.org
+CONSERVE_PASS=Conserve&876
