--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SEVEN_USER=info@sevenwondersplayschool.com
 SEVEN_PASS=Info@Seven321
-INFRA_USER=contact@ssiinfra.com
-INFRA_PASS=Contact@8755
+SSINFRA_USER=mail@ssiinfra.com
+SSINFRA_PASS=OrgTp@123
 USPS_USER=info@usps.org.in
 USPS_PASS=Info@usps0987
 MULNIVASI_USER=info@mulnivasi.in
