--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ MULNIVASI_USER=info@mulnivasi.in
 MULNIVASI_PASS=Info@mulni097
 CONSERVE_USER=info@conserveearthfoundation.org
 CONSERVE_PASS=Conserve&876
+GD_USER=info@gdcoachingacademy.com
+GD_PASS=TtUoKtre987@
