--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ CONSERVE_USER=info@conserveearthfoundation.org
 CONSERVE_PASS=Conserve&876
 GD_USER=info@gdcoachingacademy.com
 GD_PASS=TtUoKtre987@
+Dentistry_USER=info@dentistryfoundation.in
+Dentistry_PASS=AeiOu&898
+
