--- a/.env
+++ b/.env
@@ -12,4 +12,6 @@ GD_USER=info@gdcoachingacademy.com
 GD_PASS=TtUoKtre987@
 Dentistry_USER=info@dentistryfoundation.in
 Dentistry_PASS=AeiOu&898
+JM_AGRO_USER=info@jmagrotechpvtltd.com
+JM_AGRO_PASS=JmAgro)98&
 
