--- a/.env
+++ b/.env
@@ -14,4 +14,5 @@ Dentistry_USER=info@dentistryfoundation.in
 Dentistry_PASS=AeiOu&898
 JM_AGRO_USER=info@jmagrotechpvtltd.com
 JM_AGRO_PASS=JmAgro)98&
-
+BB_USER=info@thebbassociates.com
+BB_PASS=LoPthYiH@097
