--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ JM_AGRO_USER=info@jmagrotechpvtltd.com
 JM_AGRO_PASS=JmAgro)98&
 BB_USER=info@thebbassociates.com
 BB_PASS=LoPthYiH@097
+ANGDS_USER=info@angds.com
+ANGDS_PASS=ApLIuYt&821
