--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@ BB_USER=info@thebbassociates.com
 BB_PASS=LoPthYiH@097
 ANGDS_USER=info@angds.com
 ANGDS_PASS=ApLIuYt&821
+SSS_USER=info@sssevasansthan.com
+SSS_PASS=Vloi&olkYt640s
