ssinfra mail updated

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SEVEN_USER=info@sevenwondersplayschool.com
 SEVEN_PASS=Info@Seven321
-SSINFRA_USER=mail@ssiinfra.com
-SSINFRA_PASS=OrgTp@123
+SSINFRA_USER=sameerksher@ssiinfra.com
+SSINFRA_PASS=Sameer&ksher854
 USPS_USER=info@usps.org.in
 USPS_PASS=Info@usps0987
 MULNIVASI_USER=info@mulnivasi.in
@@ -19,4 +19,4 @@ BB_PASS=LoPthYiH@097
 ANGDS_USER=info@angds.com
 ANGDS_PASS=ApLIuYt&821
 SSS_USER=info@sssevasansthan.com
-SSS_PASS=Vloi&olkYt640s
+SSS_PASS=Vloi&olkYt640
