--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SEVEN_USER=info@sevenwondersplayschool.com
 SEVEN_PASS=Info@Seven321
-SSINFRA_USER=sameerksher@ssiinfra.com
-SSINFRA_PASS=Sameer&ksher854
+SSINFRA_USER=contact@ssiinfra.com
+SSINFRA_PASS=Contact@8530
 USPS_USER=info@usps.org.in
 USPS_PASS=Info@usps0987
 MULNIVASI_USER=info@mulnivasi.in
